--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
 
 		<!-- Dependencias agregadas por Mariana -->        
         <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-jaxrs</artifactId>
+            <version>3.0.6.Final</version>
+        </dependency>
+        
+        <dependency>
 		    <groupId>org.jboss.resteasy</groupId>
 		    <artifactId>resteasy-hibernatevalidator-provider</artifactId>
 		    <version>3.0.6.Final</version>
