--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
     <dependencies>
- 
 		<!-- Dependencias agregadas por Mariana -->  
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-jaxrs</artifactId>
             <version>3.0.6.Final</version>
+            <scope>provided</scope>
         </dependency>
         
         <dependency>
