--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		    <groupId>org.jboss.resteasy</groupId>
 		    <artifactId>resteasy-hibernatevalidator-provider</artifactId>
 		    <version>3.0.6.Final</version>
+		    <scope>provided</scope>
 		</dependency>
     </dependencies>
     <properties>
