--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,19 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
     <dependencies>
-		<!-- Dependencias agregadas por Mariana -->  
+		<!-- Dependencias agregadas por Mariana -->
+		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+			<version>7.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+        	<groupId>de.schlichtherle.truelicense</groupId>
+        	<artifactId>truelicense-core</artifactId>
+        	<version>1.33</version>
+        </dependency>
+		  
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-jaxrs</artifactId>
