Commit from JBoss Tools

--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,12 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
     
-    <properties>
-      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-   </properties>
-    
+   <properties>
+    	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    	<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+	</properties>
+   
+   
     <dependencies>
 		<!-- Dependencias agregadas por Mariana -->
 		<dependency>
