--- a/pom.xml
+++ b/pom.xml
@@ -40,8 +40,8 @@
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
         <failOnMissingWebXml>false</failOnMissingWebXml>
-        <project.build.sourceEncoding>UTF-16</project.build.sourceEncoding>
-    	<project.reporting.outputEncoding>UTF-16</project.reporting.outputEncoding>
+        <project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
+    	<project.reporting.outputEncoding>ISO-8859-1</project.reporting.outputEncoding>
     </properties>
 	<profiles>
         <profile>
