--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-jaxrs</artifactId>
             <version>3.0.6.Final</version>
+            <scope>provided</scope>
         </dependency>
         
         <dependency>
