--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,13 @@
             <version>3.0.6.Final</version>
             <scope>provided</scope>
         </dependency>
+        
+        <dependency>
+		    <groupId>org.jboss.resteasy</groupId>
+		    <artifactId>resteasy-hibernatevalidator-provider</artifactId>
+		    <version>3.0.6.Final</version>
+		    <scope>provided</scope>
+		</dependency>
     </dependencies>
    
     <properties>
