--- a/pom.xml
+++ b/pom.xml
@@ -28,12 +28,12 @@
             <scope>provided</scope>
         </dependency>
         
-        <dependency>
-		    <groupId>org.jboss.resteasy</groupId>
-		    <artifactId>resteasy-hibernatevalidator-provider</artifactId>
-		    <version>2.3.5.Final</version>
+		<dependency>
+    		<groupId>org.hibernate</groupId>
+		    <artifactId>hibernate-validator</artifactId>
+    		<version>4.2.0.Final</version>
 		</dependency>
-    </dependencies>
+	</dependencies>
    
     <properties>
         <maven.compiler.source>1.7</maven.compiler.source>
