--- a/pom.xml
+++ b/pom.xml
@@ -24,16 +24,21 @@
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-jaxrs</artifactId>
-            <version>2.3.5.Final</version>
+            <version>3.0.6.Final</version>
             <scope>provided</scope>
         </dependency>
         
 		<dependency>
-    		<groupId>org.hibernate</groupId>
-		    <artifactId>hibernate-validator</artifactId>
-    		<version>4.2.0.Final</version>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>5.1.0.Final</version>
 		</dependency>
-	</dependencies>
+		<dependency>
+		    <groupId>org.jboss.resteasy</groupId>
+		    <artifactId>resteasy-validator-provider-11</artifactId>
+       		<version>3.0.6.Final</version>
+    	</dependency>    
+    </dependencies>
    
     <properties>
         <maven.compiler.source>1.7</maven.compiler.source>
