--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,17 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
     
+    <dependencyManagement>
+    	<dependencies>
+        	<dependency>
+            	<groupId>org.jboss.resteasy</groupId>
+	            <artifactId>resteasy-bom</artifactId>
+    	        <version>3.0.6.Final</version>
+        	    <scope>import</scope>
+            	<type>pom</type>
+        	</dependency>
+    	</dependencies>
+	</dependencyManagement>
    
     <dependencies>
 		<!-- Dependencias agregadas por Mariana -->
