Commit from JBoss Tools

--- a/pom.xml
+++ b/pom.xml
@@ -6,18 +6,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
     
-    <dependencyManagement>
-    	<dependencies>
-        	<dependency>
-            	<groupId>org.jboss.resteasy</groupId>
-	            <artifactId>resteasy-bom</artifactId>
-    	        <version>3.0.6.Final</version>
-        	    <scope>import</scope>
-            	<type>pom</type>
-        	</dependency>
-    	</dependencies>
-	</dependencyManagement>
-   
+       
     <dependencies>
 		<!-- Dependencias agregadas por Mariana -->
 		<dependency>
@@ -35,11 +24,13 @@
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-jaxrs</artifactId>
             <version>3.0.6.Final</version>
+            <scope>provided</scope>
         </dependency>
 		<dependency>
 		    <groupId>org.jboss.resteasy</groupId>
 		    <artifactId>resteasy-validator-provider-11</artifactId>
        		<version>3.0.6.Final</version>
+       		<scope>provided</scope>
     	</dependency>
     </dependencies>
    
