--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-jaxrs</artifactId>
             <version>3.0.7.Final</version>
+            <scope>provided</scope>
         </dependency>
 		<dependency>
 		    <groupId>org.jboss.resteasy</groupId>
