Commit from JBoss Tools

--- a/pom.xml
+++ b/pom.xml
@@ -6,19 +6,6 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
     
-    
-    <dependencyManagement>
-    <dependencies>
-        <dependency>
-            <groupId>org.jboss.resteasy</groupId>
-            <artifactId>resteasy-bom</artifactId>
-            <version>3.0.7.Final</version>
-            <scope>import</scope>
-            <type>pom</type>
-        </dependency>
-    </dependencies>
-	</dependencyManagement>
-       
     <dependencies>
 		<!-- Dependencias agregadas por Mariana -->
 		<dependency>
@@ -44,6 +31,11 @@
        		<version>3.0.7.Final</version>
        		<scope>provided</scope>
     	</dependency>
+    	<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>5.0.1.Final</version>
+		</dependency>
     </dependencies>
    
     <properties>
