--- a/pom.xml
+++ b/pom.xml
@@ -25,13 +25,18 @@
             <version>3.0.7.Final</version>
             <scope>provided</scope>
         </dependency>
-		<dependency>
-		   <groupId>org.jboss.resteasy</groupId>
-		   <artifactId>resteasy-hibernatevalidator-provider</artifactId>
-   			<version>3.0.7.Final</version>
-   			<scope>provided</scope>
+        <dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>5.1.0.Final</version>
 		</dependency>
-	</dependencies>
+		<dependency>
+		    <groupId>org.jboss.resteasy</groupId>
+		    <artifactId>resteasy-validator-provider-11</artifactId>
+       		<version>3.0.7.Final</version>
+       		<scope>provided</scope>
+    	</dependency>
+    </dependencies>
    
     <properties>
         <maven.compiler.source>1.7</maven.compiler.source>
