--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+      		<groupId>org.jboss.resteasy</groupId>
+      		<artifactId>resteasy-jaxb-provider</artifactId>
+      		<version>3.0.6.Final</version>
+   		</dependency>
+        <dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
 			<version>5.1.0.Final</version>
@@ -34,7 +39,6 @@
 		    <groupId>org.jboss.resteasy</groupId>
 		    <artifactId>resteasy-validator-provider-11</artifactId>
        		<version>3.0.7.Final</version>
-       		<scope>provided</scope>
     	</dependency>
     </dependencies>
    
