--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
 		    <groupId>org.jboss.resteasy</groupId>
 		    <artifactId>resteasy-validator-provider-11</artifactId>
        		<version>3.0.7.Final</version>
+       		<scope>provided</scope>
     	</dependency>
     </dependencies>
    
