--- a/pom.xml
+++ b/pom.xml
@@ -25,12 +25,12 @@
             <version>2.3.2.Final</version>
             <scope>provided</scope>
         </dependency>
-		<dependency>
-		    <groupId>org.hibernate</groupId>
-    		<artifactId>hibernate-validator</artifactId>
-    		<version>4.2.0.Final</version>
-		</dependency>
-	</dependencies>
+        <dependency>
+		    <groupId>org.jboss.resteasy</groupId>
+		    <artifactId>resteasy-hibernatevalidator-provider</artifactId>
+       		<version>2.3.2.Final</version>
+    	</dependency>
+    </dependencies>
    
     <properties>
         <maven.compiler.source>1.7</maven.compiler.source>
